@@ -24,31 +24,71 @@
 /* GCC generates intrisics calls to some functions for _Decimal to/from
    convertions. These bindings avoids intra library  PLT calls generations,
    since libdfp provides such symbols.  */
-double  __dpd_extendsddf (_Decimal32);
-hidden_proto (__dpd_extendsddf)
+
+asm ("__dpd_floatsidd  = __GI___dpd_floatsidd");
+asm ("__dpd_floatditd  = __GI___dpd_floatditd");
+asm ("__dpd_floatsitd  = __GI___dpd_floatsitd");
+asm ("__dpd_floatdidd  = __GI___dpd_floatdidd");
+asm ("__dpd_floatsisd  = __GI___dpd_floatsisd");
+
+asm ("__dpd_trunctddd2 = __GI___dpd_trunctddd2");
+asm ("__dpd_truncddsd2 = __GI___dpd_truncddsd2");
+
 asm ("__dpd_extendsddf = __GI___dpd_extendsddf");
-
-double __dpd_truncdddf (_Decimal64);
-hidden_proto (__dpd_truncdddf)
-asm ("__dpd_truncdddf  = __GI___dpd_truncdddf");
-
-double __dpd_trunctddf (_Decimal128);
-hidden_proto (__dpd_trunctddf)
-asm ("__dpd_trunctddf  = __GI___dpd_trunctddf");
-
-_Decimal32 __dpd_truncdfsd (double);
-hidden_proto (__dpd_truncdfsd)
-asm ("__dpd_truncdfsd  = __GI___dpd_truncdfsd");
-
-_Decimal64  __dpd_extenddfdd (double);
-hidden_proto (__dpd_extenddfdd)
 asm ("__dpd_extenddfdd = __GI___dpd_extenddfdd");
-
-_Decimal128  __dpd_extenddftd (double);
-hidden_proto (__dpd_extenddftd)
 asm ("__dpd_extenddftd = __GI___dpd_extenddftd");
+asm ("__dpd_extendsdtd2 = __GI___dpd_extendsdtd2");
+asm ("__dpd_extendsddd2 = __GI___dpd_extendsddd2");
+asm ("__dpd_extendddtd2 = __GI___dpd_extendddtd2");
 
-_Decimal32 __dpd_trunctdsd2 (_Decimal128);
-hidden_proto (__dpd_trunctdsd2)
+asm ("__dpd_truncdddf  = __GI___dpd_truncdddf");
+asm ("__dpd_trunctddf  = __GI___dpd_trunctddf");
+asm ("__dpd_truncdfsd  = __GI___dpd_truncdfsd");
 asm ("__dpd_trunctdsd2 = __GI___dpd_trunctdsd2");
+
+asm ("__dpd_fixddsi = __GI___dpd_fixddsi");
+asm ("__dpd_fixsdsi = __GI___dpd_fixsdsi");
+asm ("__dpd_fixdddi = __GI___dpd_fixdddi");
+asm ("__dpd_fixtdsi = __GI___dpd_fixtdsi");
+asm ("__dpd_fixsddi = __GI___dpd_fixsddi");
+asm ("__dpd_fixtddi = __GI___dpd_fixtddi");
+
+asm ("__dpd_addsd3 = __GI___dpd_addsd3");
+asm ("__dpd_addtd3 = __GI___dpd_addtd3");
+asm ("__dpd_adddd3 = __GI___dpd_adddd3");
+
+asm ("__dpd_subdd3 = __GI___dpd_subdd3");
+asm ("__dpd_subsd3 = __GI___dpd_subsd3");
+asm ("__dpd_subtd3 = __GI___dpd_subtd3");
+
+asm ("__dpd_divsd3 = __GI___dpd_divsd3");
+asm ("__dpd_divtd3 = __GI___dpd_divtd3");
+asm ("__dpd_divdd3 = __GI___dpd_divdd3");
+
+asm ("__dpd_mulsd3 = __GI___dpd_mulsd3");
+asm ("__dpd_multd3 = __GI___dpd_multd3");
+asm ("__dpd_muldd3 = __GI___dpd_muldd3");
+
+asm ("__dpd_gtdd2 = __GI___dpd_gtdd2");
+asm ("__dpd_gtds2 = __GI___dpd_gtsd2");
+asm ("__dpd_gtdt2 = __GI___dpd_gttd2");
+
+asm ("__dpd_eqdd2 = __GI___dpd_eqdd2");
+asm ("__dpd_eqsd2 = __GI___dpd_eqsd2");
+asm ("__dpd_eqtd2 = __GI___dpd_eqtd2");
+
+asm ("__dpd_ltdd2 = __GI___dpd_ltdd2");
+asm ("__dpd_ltsd2 = __GI___dpd_ltsd2");
+asm ("__dpd_lttd2 = __GI___dpd_lttd2");
+
+asm ("__dpd_gtsd2 = __GI___dpd_gtsd2");
+asm ("__dpd_gttd2 = __GI___dpd_gttd2");
+
+asm ("__dpd_letd2 = __GI___dpd_letd2");
+asm ("__dpd_getd2 = __GI___dpd_getd2");
+
+asm ("__dpd_netd2 = __GI___dpd_netd2");
+asm ("__dpd_nesd2 = __GI___dpd_nesd2");
+asm ("__dpd_nedd2 = __GI___dpd_nedd2");
+
 #endif
