@@ -2,6 +2,7 @@
 
 	* sysdeps/bid/symbol-hacks.h: BID symbol hacks to avoid internal PLT
 	calls.
+	* sysdeps/dpd/symbol-hacks.h: Fix symbol definitions.
 
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
